# assignment-3-computational-geometry

./: .gitignore  CMakeLists.txt  README.md  convex_hull_tasks.md  justfile  parabola_points.txt  points.txt
benchmarks/: bench.cpp  convex_hull_bench.cpp  quickhull_bench.cpp
include/: common.hpp  graham_scan.hpp  gram_scan_convex_hull.hpp  marriage_before_conquest.hpp  quickhull.hpp  util.hpp
report/: bench.typ  main.typ
report/appendix/: graham_deque.typ  graham_impl.typ  mbc_impl.typ  quick_impl.typ
report/assets/: perf_stat_deque.txt  perf_stat_vec.txt
report/chapters/: conclusion.typ  graham-bench.typ  graham-complexity.typ  graham-description.typ  introduction.typ  mbc.typ  quickhull.typ
report/data/: graham_circle.csv  graham_circle_optimized.csv  graham_parabola.csv  graham_parabola_optimized.csv  graham_square.csv  graham_square_optimized.csv  grahamdeque_circle.csv  grahamdeque_circle_optimized.csv  grahamdeque_parabola.csv  grahamdeque_parabola_optimized.csv  grahamdeque_square.csv  grahamdeque_square_optimized.csv  grahamlist_circle.csv  grahamlist_circle_optimized.csv  grahamlist_parabola.csv  grahamlist_parabola_optimized.csv  grahamlist_square.csv  grahamlist_square_optimized.csv  grahamvec_circle.csv  grahamvec_circle_optimized.csv  grahamvec_parabola.csv  grahamvec_parabola_optimized.csv  grahamvec_square.csv  grahamvec_square_optimized.csv  marriage_circle.csv  marriage_circle_optimized.csv  marriage_parabola.csv  marriage_parabola_optimized.csv  marriage_square.csv  marriage_square_optimized.csv  marriagev2_circle.csv  marriagev2_circle_optimized.csv  marriagev2_parabola.csv  marriagev2_parabola_optimized.csv  marriagev2_square.csv  marriagev2_square_optimized.csv  quick_circle.csv  quick_circle_optimized.csv  quick_parabola.csv  quick_parabola_optimized.csv  (+2 more)
report/graham/: description.typ  graham.typ
src/: common.cpp  common.hpp  graham_scan.cpp  gram_scan_convex_hull.cpp  main.cpp  marriage_before_conquest.cpp  quickhull.cpp  util.cpp  util.hpp
vis/: generate_tests.py  main.py  parabola.py  pyproject.toml
